tests/paczka1/fuzzy1/37601470.err
Error in line 2: 22r A846 78,9
Error in line 12: P9TV3hQ S154 436,3
Error in line 6: 22r S489 20,5
Error in line 24: 6Tj S154 69,9
Error in line 30: PbY6jgo1CQ S489 84,0
